--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -38,7 +38,7 @@ permissions:
   contents: read
 
 jobs:
-  build-docker-image:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -51,6 +51,13 @@ jobs:
 
       - name: Build book
         run: mdbook build
+
+  build-docker-image:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
