--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -6,6 +6,7 @@ name: Configure Azure environment
 on:
   pull_request:
     types: [labeled]
+  workflow_dispatch:
 
 env:
   IMAGE_REGISTRY_URL: ghcr.io
