--- a/.github/workflows/test_book.yml
+++ b/.github/workflows/test_book.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup mdBook
-      - uses: peaceiris/actions-mdbook@v1
+        uses: peaceiris/actions-mdbook@v1
         with:
           mdbook-version: 'latest'
 
