--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,7 +1,7 @@
 # Copyright (c) GitHub, Inc.
 # Copyright (c) yaaamaada.
 
-name: Configure Azure environment
+name: Destroy Azure environment
 
 on:
   pull_request:
